fix overlap layout when view port height is small

--- a/src/public/stylus/_base/_layout.styl
+++ b/src/public/stylus/_base/_layout.styl
@@ -9,7 +9,7 @@ body
 			.page-section
 				position relative
 				display block
-				height 600px
+				height 775px
 				transition: height .2s
 
 		&.page-remain
